LU-3596 o2iblnd: kiblnd_check_conns can deadlock

This is a port of LU-78 to b1_8, here is the original commit message:

kiblnd_check_conns() called kiblnd_check_sends() with hold of global
rwlock, it's wrong because kiblnd_check_sends() could do many things:
 - call lnet_finalize() which is not safe with hold of spinlock
 - call kiblnd_close_conn() which requires to write_lock the same
   global lock
 - kiblnd_check_sends() might need to allocate NOOP message

It can be fixed by moving call of kiblnd_check_sends out from spinlock

Signed-off-by: Kit Westneat <kwestneat@ddn.com>
Change-Id: I8a9bcb5cd8ca1700da7bde24616ce54d55b172c0