lnet/klnds/o2iblnd/o2iblnd.h
@@ -558,6 +558,7 @@ typedef struct kib_conn
         int                 ibc_scheduled:1;    /* scheduled for attention */
         int                 ibc_ready:1;        /* CQ callback fired */
         unsigned long       ibc_last_send;      /* time of last send */
+        struct list_head    ibc_connd_list;     /* list in kiblnd_check_conns */
         struct list_head    ibc_early_rxs;      /* rxs completed before ESTABLISHED */
         struct list_head    ibc_tx_noops;       /* IBLND_MSG_NOOPs for IBLND_MSG_VERSION_1 */
         struct list_head    ibc_tx_queue;       /* sends that need a credit */
@@ -574,7 +575,7 @@ typedef struct kib_conn
         kib_connvars_t     *ibc_connvars;       /* in-progress connection state */
 } kib_conn_t;
 
-#define IBLND_CONN_INIT               0         /* being intialised */
+#define IBLND_CONN_INIT               0         /* being initialised */
 #define IBLND_CONN_ACTIVE_CONNECT     1         /* active sending req */
 #define IBLND_CONN_PASSIVE_WAIT       2         /* passive waiting for rtu */
 #define IBLND_CONN_ESTABLISHED        3         /* connection established */
@@ -675,7 +676,7 @@ kiblnd_send_keepalive(kib_conn_t *conn)
 }
 
 static inline int
-kiblnd_send_noop(kib_conn_t *conn)
+kiblnd_need_noop(kib_conn_t *conn)
 {
         LASSERT (conn->ibc_state >= IBLND_CONN_ESTABLISHED);
 
